Bug 326279 - Ctrl+Click on grouped tasks in task manager does not start the present window effect anymore
Summary: Ctrl+Click on grouped tasks in task manager does not start the present window...
Status: RESOLVED FIXED
Alias: None
Product: plasma4
Classification: Unmaintained
Component: widget-taskbar (other bugs)
Version First Reported In: 4.11.2
Platform: Ubuntu Linux
: NOR normal
Target Milestone: ---
Assignee: Plasma Bugs List
URL:
Keywords:
Depends on:
Blocks:
 
Reported: 2013-10-19 19:14 UTC by g111
Modified: 2014-04-28 10:34 UTC (History)
2 users (show)

See Also:
Latest Commit:
Version Fixed/Implemented In: 4.11.10
Sentry Crash Report:


Attachments

Note You need to log in before you can comment on or make changes to this bug.
Description g111 2013-10-19 19:14:14 UTC
After upgrading to kubuntu 13.10 with KDE 4.11.2 a left mouse click combined with holding the ctrl-key does no longer show the windows of this group in a "present window" effect. This was the case until KDE 4.10.

Reproducible: Always

Steps to Reproduce:
1. Configure the task bar to group windows.
2. Open enough windows of one kind so that they are grouped in the task manager.
3. Hold down the ctrl key and left click on the grouped item inside the task manager.
Actual Results:  
The group's submenu opens listing all the windows of this group.

Expected Results:  
The windows of this group should be displayed with the present windows effect of kwin.

As I've got very used to this feature I call it a bug that it does not work anymore.
Comment 1 g111 2014-04-24 15:58:25 UTC
This Bug still is present in KDE 4.13.0.

I am really missing this functionality.
Comment 2 Eike Hein 2014-04-28 08:12:56 UTC
Git commit 87a754910fdb3b71a489dbbaf8f962f0feb9b46d by Eike Hein.
Committed on 28/04/2014 at 08:12.
Pushed by hein into branch 'KDE/4.11'.

Trigger the Present Windows effect when control-clicking on a group.

M  +6    -2    plasma/desktop/applets/tasks/package/contents/ui/Task.qml
M  +1    -0    plasma/desktop/applets/tasks/package/contents/ui/main.qml
M  +10   -0    plasma/desktop/applets/tasks/tasks.cpp
M  +1    -0    plasma/desktop/applets/tasks/tasks.h

http://commits.kde.org/kde-workspace/87a754910fdb3b71a489dbbaf8f962f0feb9b46d
Comment 3 Eike Hein 2014-04-28 08:24:15 UTC
Git commit 9b6fe293a818df5fb1d778ee64d55276bdde7c36 by Eike Hein.
Committed on 28/04/2014 at 08:23.
Pushed by hein into branch 'master'.

Trigger the Present Windows effect when control-clicking on a group.

Forward-port of kde-workspace:87a7549.

M  +3    -1    applets/taskmanager/package/contents/ui/Task.qml
M  +2    -0    applets/taskmanager/package/contents/ui/main.qml
M  +9    -0    applets/taskmanager/plugin/backend.cpp
M  +1    -0    applets/taskmanager/plugin/backend.h

http://commits.kde.org/plasma-desktop/9b6fe293a818df5fb1d778ee64d55276bdde7c36
Comment 4 Eike Hein 2014-04-28 08:26:06 UTC
Fix will be in 4.13.1.
Comment 5 g111 2014-04-28 08:33:33 UTC
Great! This are really good news!

Thank you very much, Eike.
Comment 6 Eike Hein 2014-04-28 09:04:07 UTC
No problem - it's my fault anyway; I frankly forgot about this feature when I rewrote the Task Manager for 4.11.
Comment 7 Christoph Feck 2014-04-28 10:34:57 UTC
The fix will be in KDE Workspaces 4.11.10, which will be released June 10th.