Trigger the Present Windows effect when control-clicking on a group.

BUG:326279